templates/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: webapp-gateway
    namespace: istio-system
spec:
    selector:
        istio: ingressgateway # use Istio default gateway implementation
    servers:
    # - port:
    #     number: 80
    #     name: http
    #     protocol: HTTP
    #   hosts:
    #    - "*"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
      - app.kops.prod.rajmehta.live
      tls:
        mode: SIMPLE
        credentialName: letsencrypt-production

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: webapp-vs
spec:
    hosts:
    - '*'
    gateways:
    - istio-system/webapp-gateway
    http:
    # - match:
    #     - port: 80
    #     - uri:
    #         exact: /healthy
    #   route:
    #   - destination:
    #         host: webapp-service
    #         port:
    #             number: 8080
    
    - match:
        - port: 443
        - uri:
            prefix: /
      route:
      - destination:
            host: webapp-service
            port:
                number: 8080

      retries:
        attempts: 3
        perTryTimeout: 0.1s
        retryOn: gateway-error,connect-failure,refused-stream
